se modificia seccion acerca de mi

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               <p class="fst-italic">
                 Persona abierta a nuevos aprendizajes, y desarrollo personal y
                 profesional. Me gusta trabajar en el área de Ecommerce, Ventas,
-                Marketing y Gestión de Redes Sociale
+                Marketing y Gestión de Redes Sociales.
               </p>
             </div>
           </div>
