--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="assets\css\estilos.css" />
     <title>Franklin Medina</title>
   </head>
   <body>
