--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Franklin Medina</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +11,10 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets\css\estilos.css" />
-    <title>Franklin Medina</title>
+    <script
+      src="https://kit.fontawesome.com/26c3be3da4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!-- Menu -->
@@ -77,6 +81,21 @@
               <p class="card-text">14 de septiembre de 1984</p>
               <h5 class="card-title mb-0">Profesión</h5>
               <p class="card-text">Licenciado en Administración</p>
+
+              <div class="row">
+                <div class="col-md-2">
+                  <h5 class="card-title mb-0">
+                    <i class="fa-solid fa-phone"></i> Telefono
+                  </h5>
+                  <p class="card-text">+56976896097</p>
+                </div>
+                <div class="col-md-10">
+                  <h5 class="card-title mb-0">
+                    <i class="fa-solid fa-envelope"></i> Correo
+                  </h5>
+                  <p class="card-text pb-3">franxmb@gmail.com</p>
+                </div>
+              </div>
 
               <p class="fst-italic">
                 Persona abierta a nuevos aprendizajes, y desarrollo personal y
