se agregan estudios y esperiencial laboral

--- a/index.html
+++ b/index.html
@@ -108,6 +108,79 @@
       </div>
     </section>
 
+    <!-- Educacion -->
+
+    <section>
+      <h2 class="text-center pb-1">Educación</h2>
+
+      <div class="container-fluid bg-secondary bg-opacity-10">
+        <div class="row row-cols-3 text-center">
+          <div class="col"><h5>Universitaria</h5></div>
+          <div class="col"><h5>Diplomados</h5></div>
+          <div class="col"><h5>Cursos</h5></div>
+          <div class="col">
+            <p>Universidad Simon Rodriguez - Lcdo en Administración</p>
+          </div>
+          <div class="col"><p>AIEP - Ecommerce</p></div>
+          <div class="col"><p>Desafio Latam - Desarrollo Front End</p></div>
+          <div class="col"></div>
+          <div class="col">
+            <p>Instituto de Internet - Gestión de RRSS</p>
+          </div>
+          <div class="col">
+            <p>Instituto de Internet - Shopify</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Experiencia Laboral -->
+
+    <section>
+      <h2 class="text-center pb-1 pt-3">Experiencia Laboral</h2>
+
+      <div class="container-fluid bg-secondary bg-opacity-10">
+        <div class="row row-cols-3 text-center">
+          <div class="col">
+            <h5>Mashini</h5>
+            <p><b>Septiembre 2021 - Actualmente</b></p>
+          </div>
+          <div class="col">
+            <h5>Bolco</h5>
+            <p><b>Marzo 2018 - Septiembre 2021</b></p>
+          </div>
+          <div class="col">
+            <h5>DRTS Inversiones</h5>
+            <p><b>Enero 2015 - Febrero 2018</b></p>
+          </div>
+          <div class="col">
+            <p>
+              <b>Administrador Web. </b> Gestión completa del ecommerce:
+              modificación del tema en shopify, carga de productos y precios,
+              descuentos, optimización de SEO, crear colecciones, desarrollar
+              secciones con html, manejo de codigo fuente y css, revision de
+              aplicaciones,. De igual forma, creacion de web layer y mailing con
+              bloomreach y klaviyo.
+            </p>
+          </div>
+          <div class="col">
+            <p>
+              <b>Encargado Ecommerce, Marketplaces y Marketing Digital. </b>
+              Creación y gestión del ecommerce y marketplace, procesar los
+              pedidos en estos, postventa, envíos. Creación y administración de
+              las campañas de publicidad en meta bussines y google ads.
+            </p>
+          </div>
+          <div class="col">
+            <p>
+              <b>Asesor de Ventas. </b> Visitar clientes e impulsar las ventas
+              de productos, posteriormente , realizar cobranza y postventa.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
