--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <section>
       <div class="card mb-3">
         <div class="row g-0">
-          <div class="col-md-3">
+          <div class="col-12 col-md-3">
             <img
               src="assets\img\foto.jpg"
               class="img-fluid rounded"
@@ -74,7 +74,9 @@
               width="100%"
             />
           </div>
-          <div class="col-md-9 bg-secondary bg-opacity-10">
+          <div
+            class="col-12 col-md-9 bg-secondary bg-opacity-10 d-flex flex-wrap"
+          >
             <div class="card-body">
               <h2 class="card-title mb-2">Acerca de Mi</h2>
               <h5 class="card-title mb-0">Fecha de Nacimiento</h5>
@@ -114,7 +116,7 @@
       <h2 class="text-center pb-1">Educación</h2>
 
       <div class="container-fluid bg-secondary bg-opacity-10">
-        <div class="row row-cols-3 text-center">
+        <div class="row row-cols-3 text-center d-flex flex-wrap">
           <div class="col"><h5>Universitaria</h5></div>
           <div class="col"><h5>Diplomados</h5></div>
           <div class="col"><h5>Cursos</h5></div>
@@ -122,12 +124,9 @@
             <p>Universidad Simon Rodriguez - Lcdo en Administración</p>
           </div>
           <div class="col"><p>AIEP - Ecommerce</p></div>
-          <div class="col"><p>Desafio Latam - Desarrollo Front End</p></div>
-          <div class="col"></div>
           <div class="col">
+            <p>Desafio Latam - Desarrollo Front End</p>
             <p>Instituto de Internet - Gestión de RRSS</p>
-          </div>
-          <div class="col">
             <p>Instituto de Internet - Shopify</p>
           </div>
         </div>
@@ -140,7 +139,7 @@
       <h2 class="text-center pb-1 pt-3">Experiencia Laboral</h2>
 
       <div class="container-fluid bg-secondary bg-opacity-10">
-        <div class="row row-cols-3 text-center">
+        <div class="row row-cols-3 text-center d-flex flex-wrap">
           <div class="col">
             <h5>Mashini</h5>
             <p><b>Septiembre 2021 - Actualmente</b></p>
@@ -180,6 +179,59 @@
         </div>
       </div>
     </section>
+
+    <!-- Portafolio -->
+
+    <h2 class="text-center pb-1 pt-3">Portafolio</h2>
+
+    <div
+      class="d-flex flex-wrap justify-content-center position-relative ms-2 me-2 pb-4 bg-secondary bg-opacity-10"
+    >
+      <div class="card position-absolute top-0 start-0" style="width: 25rem">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <a href="#" class="btn btn-primary me-1">Página</a>
+            <a href="#" class="btn btn-primary ms-1">Repositorio</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card position-absolute top-0 end-0" style="width: 25rem">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <div class="btn-group btn-group-horizontal">
+            <a href="#" class="btn btn-primary me-1">Página</a>
+            <a href="#" class="btn btn-primary ms-1">Repositorio</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="card" style="width: 25rem">
+        <img src="..." class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Card title</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <div class="btn-group btn-group-horizontal">
+            <a href="#" class="btn btn-primary me-1">Página</a>
+            <a href="#" class="btn btn-primary ms-1">Repositorio</a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
