se define la estructura del portafolio

--- a/index.html
+++ b/index.html
@@ -234,7 +234,9 @@
 
     <!--Portafolio-->
     <main>
-      <div class="container-fluid px-4 m-xs-0 p-md-1">
+      <h2 class="text-center pb-1 pt-4">Portafolio</h2>
+
+      <div class="container-fluid px-4 m-xs-0 p-md-1 pt-1">
         <div class="row p-xs-0 p-md-5">
           <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
@@ -266,28 +268,23 @@
 
           <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
-              <img
-                src="assets\img\cupon-2.jpg"
-                class="card-img-top"
-                alt="comida"
-              />
+              <img src="assets\img\css.jpg" class="card-img-top" alt="plumon" />
               <div class="card-body">
-                <p class="card-text fs-5 lh-sm">
-                  Entrada para compartir + platos de fondo + postres +
-                  bebestibles.
-                </p>
-                <p class="text-body-secondary mb-1">V For Vegan</p>
-                <p class="text-body-secondary">
-                  <i class="fa-solid fa-location-dot"></i> 777 Jesse Pinkman,
-                  Chile
+                <p class="card-text fs-5 lh-sm">Introducción a CSS.</p>
+                <p class="text-body-secondary mb-1">
+                  Estructurar el contenido de un documento con HTML y utilizar
+                  componentes CSS para definir el aspecto visual de la página
+                  web.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
-                  <div class="col col-sm-9 text-end">
-                    <p class="text-body-secondary me-2">$30.990</p>
-                  </div>
                   <div class="col col-sm-3 text-start">
-                    <h5 class="text-success ms-1">$12.990</h5>
+                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio</a
+                    >
                   </div>
                 </div>
               </div>
@@ -297,113 +294,114 @@
           <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
               <img
-                src="assets\img\cupon-3.jpg"
+                src="assets\img\flex.jpg"
                 class="card-img-top"
-                alt="dental"
+                alt="plumon"
               />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">
-                  Evaluación integral + blanqueamiento dental led + limpieza +
-                  fluoracion.
-                </p>
-                <p class="text-body-secondary mb-1">Clinica Dental Quijada</p>
-                <p class="text-body-secondary">
-                  <i class="fa-solid fa-location-dot"></i> 1342, Blanco
-                  Encalada, Chile
-                </p>
-                <hr class="dropdown-divider-bg" />
-                <div class="row g-0 align-items-start">
-                  <div class="col col-sm-9 text-end">
-                    <p class="text-body-secondary me-2">$300.000</p>
-                  </div>
-                  <div class="col col-sm-3 text-start">
-                    <h5 class="text-success ms-1">$25.990</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-2">
-            <div class="card">
-              <img
-                src="assets\img\cupon-4.jpg"
-                class="card-img-top"
-                alt="colacion"
-              />
-              <div class="card-body">
-                <p class="card-text fs-5 lh-sm">
-                  Colación para 2 personas + postre (no incluye bebidas).
-                </p>
-                <p class="text-body-secondary mb-1">Suricata almacen</p>
-                <p class="text-body-secondary">
-                  <i class="fa-solid fa-location-dot"></i> 1071 Miguel Claro,
-                  Chile
-                </p>
-                <hr class="dropdown-divider-bg" />
-                <div class="row g-0 align-items-start">
-                  <div class="col col-sm-9 text-end">
-                    <p class="text-body-secondary me-2">$4.200</p>
-                  </div>
-                  <div class="col col-sm-3 text-start">
-                    <h5 class="text-success ms-1">$2.100</h5>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-2">
-            <div class="card">
-              <img
-                src="assets\img\cupon-5.jpg"
-                class="card-img-top"
-                alt="kids"
-              />
-              <div class="card-body">
-                <p class="card-text fs-5 lh-sm">
-                  1, 2 o 4 tickets para Stukids. Elige sucursal.
+                  Alineando Contenido con Flex.
                 </p>
                 <p class="text-body-secondary mb-1">
-                  Stukids, Centro de Eventos
-                </p>
-                <p class="text-body-secondary">
-                  <i class="fa-solid fa-location-dot"></i> 133 El Tranque, Chile
+                  Posicionar elementos en maquetas web, usando las reglas CSS
+                  necesarias para realizar correctamente este proceso.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
-                  <div class="col col-sm-9 text-end">
-                    <p class="text-body-secondary me-2">$4.000</p>
-                  </div>
                   <div class="col col-sm-3 text-start">
-                    <h5 class="text-success ms-1">$2.500</h5>
+                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio</a
+                    >
                   </div>
                 </div>
               </div>
             </div>
           </div>
-          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-2">
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
               <img
-                src="assets\img\cupon-6.jpg"
+                src="assets\img\bootstrap.jpg"
                 class="card-img-top"
-                alt="atacama"
+                alt="plumon"
               />
               <div class="card-body">
-                <p class="card-text fs-5 lh-sm">
-                  San Pedro de Atacama: 1 o 2 noches en alojamiento a elección.
-                </p>
-                <p class="text-body-secondary mb-1">D-Latam Travel</p>
-                <p class="text-body-secondary">
-                  <i class="fa-solid fa-location-dot"></i> Metro U. de Chile
+                <p class="card-text fs-5 lh-sm">Bootstrap.</p>
+                <p class="text-body-secondary mb-1">
+                  Construir una interfaz web responsiva utilizando componentes
+                  de la biblioteca Bootstrap para dar solución a un problema
+                  planteado.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
-                  <div class="col col-sm-9 text-end">
-                    <p class="text-body-secondary me-2">$80.200</p>
-                  </div>
                   <div class="col col-sm-3 text-start">
-                    <h5 class="text-success ms-1">$44.100</h5>
+                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img
+                src="assets\img\github.jpg"
+                class="card-img-top"
+                alt="plumon"
+              />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Terminal, Git y Github.</p>
+                <p class="text-body-secondary mb-1">
+                  Construir una interfaz web responsiva utilizando componentes
+                  de la biblioteca Bootstrap para dar solución a un problema
+                  planteado..
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-3 text-start">
+                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img
+                src="assets\img\fork.jpg"
+                class="card-img-top"
+                alt="plumon"
+              />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Repositorios Forkeados.</p>
+                <p class="text-body-secondary mb-1">
+                  Repositorios forkeados y comentados para el proyecto final.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-5 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio 1</a
+                    >
+                  </div>
+                  <div class="col col-sm-7 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio 2</a
+                    >
                   </div>
                 </div>
               </div>
