--- a/index.html
+++ b/index.html
@@ -180,58 +180,6 @@
       </div>
     </section>
 
-    <!-- 
-    <h2 class="text-center pb-1 pt-3">Portafolio</h2>
-
-    <div
-      class="d-flex flex-wrap justify-content-center position-relative ms-2 me-2 pb-4 bg-secondary bg-opacity-10"
-    >
-      <div class="card position-absolute top-0 start-0" style="width: 25rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-            <a href="#" class="btn btn-primary me-1">Página</a>
-            <a href="#" class="btn btn-primary ms-1">Repositorio</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card position-absolute top-0 end-0" style="width: 25rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <div class="btn-group btn-group-horizontal">
-            <a href="#" class="btn btn-primary me-1">Página</a>
-            <a href="#" class="btn btn-primary ms-1">Repositorio</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="card" style="width: 25rem">
-        <img src="..." class="card-img-top" alt="..." />
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">
-            Some quick example text to build on the card title and make up the
-            bulk of the card's content.
-          </p>
-          <div class="btn-group btn-group-horizontal">
-            <a href="#" class="btn btn-primary me-1">Página</a>
-            <a href="#" class="btn btn-primary ms-1">Repositorio</a>
-          </div>
-        </div>
-      </div>
-    </div> -->
-
     <!--Portafolio-->
     <main>
       <h2 class="text-center pb-1 pt-4">Portafolio</h2>
@@ -360,9 +308,9 @@
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Terminal, Git y Github.</p>
                 <p class="text-body-secondary mb-1">
-                  Construir una interfaz web responsiva utilizando componentes
-                  de la biblioteca Bootstrap para dar solución a un problema
-                  planteado..
+                  Crear un repositorio remoto en Github para controlar las
+                  versiones de un proyecto y publicar la página web utilizando
+                  Github Pages.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
@@ -410,6 +358,24 @@
         </div>
       </div>
     </main>
+
+    <!--Portafolio-->
+
+    <section class="footer">
+      <div class="footer bg-black text-center text-light pt-2">
+        <p>Franklin Medina 2023</p>
+        <i
+          class="fa-brands fa-github me-2"
+          style="font-size: 24px; color: #ffffff"
+          href="#"
+        ></i>
+        <i
+          class="fa-brands fa-linkedin ms-2"
+          style="font-size: 24px; color: #ffffff"
+          href="#"
+        ></i>
+      </div>
+    </section>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
