Se agregan los enlaces y se crea la pagina de portafolio

--- a/index.html
+++ b/index.html
@@ -43,19 +43,20 @@
         >
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="portafolio.html"
+                >Portafolio</a
+              >
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="https://github.com/franklinxavier14?tab=repositories"
+                >Mi Repositorio</a
+              >
             </li>
           </ul>
         </div>
@@ -95,11 +96,11 @@
                   <h5 class="card-title mb-0">
                     <i class="fa-solid fa-envelope"></i> Correo
                   </h5>
-                  <p class="card-text pb-3">franxmb@gmail.com</p>
+                  <a href="mailto:franxmb@gmail.com">franxmb@gmail.com</a>
                 </div>
               </div>
 
-              <p class="fst-italic">
+              <p class="fst-italic pt-2">
                 Persona abierta a nuevos aprendizajes, y desarrollo personal y
                 profesional. Me gusta trabajar en el área de Ecommerce, Ventas,
                 Marketing y Gestión de Redes Sociales.
@@ -202,10 +203,18 @@
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
-                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                    <a
+                      class="btn btn-primary"
+                      href="https://franklinxavier14.github.io/proyectocv/"
+                      role="button"
+                      >Página</a
+                    >
                   </div>
                   <div class="col col-sm-9 text-start">
-                    <a class="btn btn-primary" href="#" role="button"
+                    <a
+                      class="btn btn-primary"
+                      href="https://github.com/franklinxavier14/proyectocv"
+                      role="button"
                       >Repositorio</a
                     >
                   </div>
@@ -227,10 +236,18 @@
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
-                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                    <a
+                      class="btn btn-primary"
+                      href="https://franklinxavier14.github.io/landingpage/"
+                      role="button"
+                      >Página</a
+                    >
                   </div>
                   <div class="col col-sm-9 text-start">
-                    <a class="btn btn-primary" href="#" role="button"
+                    <a
+                      class="btn btn-primary"
+                      href="https://github.com/franklinxavier14/landingpage"
+                      role="button"
                       >Repositorio</a
                     >
                   </div>
@@ -257,10 +274,18 @@
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
-                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                    <a
+                      class="btn btn-primary"
+                      href="https://franklinxavier14.github.io/flex/"
+                      role="button"
+                      >Página</a
+                    >
                   </div>
                   <div class="col col-sm-9 text-start">
-                    <a class="btn btn-primary" href="#" role="button"
+                    <a
+                      class="btn btn-primary"
+                      href="https://github.com/franklinxavier14/flex"
+                      role="button"
                       >Repositorio</a
                     >
                   </div>
@@ -286,10 +311,18 @@
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
-                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                    <a
+                      class="btn btn-primary"
+                      href="https://franklinxavier14.github.io/bootstrap/"
+                      role="button"
+                      >Página</a
+                    >
                   </div>
                   <div class="col col-sm-9 text-start">
-                    <a class="btn btn-primary" href="#" role="button"
+                    <a
+                      class="btn btn-primary"
+                      href="https://github.com/franklinxavier14/bootstrap"
+                      role="button"
                       >Repositorio</a
                     >
                   </div>
@@ -315,10 +348,18 @@
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
-                    <a class="btn btn-primary" href="#" role="button">Página</a>
+                    <a
+                      class="btn btn-primary"
+                      href="https://franklinxavier14.github.io/desafiogit/"
+                      role="button"
+                      >Página</a
+                    >
                   </div>
                   <div class="col col-sm-9 text-start">
-                    <a class="btn btn-primary" href="#" role="button"
+                    <a
+                      class="btn btn-primary"
+                      href="https://github.com/franklinxavier14/desafiogit"
+                      role="button"
                       >Repositorio</a
                     >
                   </div>
@@ -363,16 +404,21 @@
 
     <section class="footer">
       <div class="footer bg-black text-center text-light pt-2">
-        <p>Franklin Medina 2023</p>
+        <p>Franklin Medina 2023. Todos los derechos reservados</p>
         <i
           class="fa-brands fa-github me-2"
           style="font-size: 24px; color: #ffffff"
-          href="#"
+          href="https://github.com/franklinxavier14"
         ></i>
         <i
-          class="fa-brands fa-linkedin ms-2"
+          class="fa-brands fa-linkedin ms-2 me-2"
           style="font-size: 24px; color: #ffffff"
-          href="#"
+          href="https://www.linkedin.com/in/franklin-medina-7124b9a7/"
+        ></i>
+        <i
+          class="fa-solid fa-envelope ms-2"
+          style="font-size: 24px; color: #ffffff"
+          href="mailto:franxmb@gmail.com"
         ></i>
       </div>
     </section>
