--- a/index.html
+++ b/index.html
@@ -205,6 +205,7 @@
                   <div class="col col-sm-3 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://franklinxavier14.github.io/proyectocv/"
                       role="button"
                       >Página</a
@@ -213,6 +214,7 @@
                   <div class="col col-sm-9 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://github.com/franklinxavier14/proyectocv"
                       role="button"
                       >Repositorio</a
@@ -238,6 +240,7 @@
                   <div class="col col-sm-3 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://franklinxavier14.github.io/landingpage/"
                       role="button"
                       >Página</a
@@ -246,6 +249,7 @@
                   <div class="col col-sm-9 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://github.com/franklinxavier14/landingpage"
                       role="button"
                       >Repositorio</a
@@ -276,6 +280,7 @@
                   <div class="col col-sm-3 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://franklinxavier14.github.io/flex/"
                       role="button"
                       >Página</a
@@ -284,6 +289,7 @@
                   <div class="col col-sm-9 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://github.com/franklinxavier14/flex"
                       role="button"
                       >Repositorio</a
@@ -313,6 +319,7 @@
                   <div class="col col-sm-3 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://franklinxavier14.github.io/bootstrap/"
                       role="button"
                       >Página</a
@@ -321,6 +328,7 @@
                   <div class="col col-sm-9 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://github.com/franklinxavier14/bootstrap"
                       role="button"
                       >Repositorio</a
@@ -350,6 +358,7 @@
                   <div class="col col-sm-3 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://franklinxavier14.github.io/desafiogit/"
                       role="button"
                       >Página</a
@@ -358,6 +367,7 @@
                   <div class="col col-sm-9 text-start">
                     <a
                       class="btn btn-primary"
+                      target="_blank"
                       href="https://github.com/franklinxavier14/desafiogit"
                       role="button"
                       >Repositorio</a
@@ -405,21 +415,29 @@
     <section class="footer">
       <div class="footer bg-black text-center text-light pt-2">
         <p>Franklin Medina 2023. Todos los derechos reservados</p>
-        <i
-          class="fa-brands fa-github me-2"
-          style="font-size: 24px; color: #ffffff"
+        <a
           href="https://github.com/franklinxavier14"
-        ></i>
-        <i
-          class="fa-brands fa-linkedin ms-2 me-2"
-          style="font-size: 24px; color: #ffffff"
+          target="_blank"
+          class="me-2"
+        >
+          <i class="fab fa-github" style="font-size: 24px; color: #ffffff"></i>
+        </a>
+        <a
           href="https://www.linkedin.com/in/franklin-medina-7124b9a7/"
-        ></i>
-        <i
-          class="fa-solid fa-envelope ms-2"
-          style="font-size: 24px; color: #ffffff"
-          href="mailto:franxmb@gmail.com"
-        ></i>
+          target="_blank"
+          class="ms-2 me-2"
+        >
+          <i
+            class="fab fa-linkedin"
+            style="font-size: 24px; color: #ffffff"
+          ></i>
+        </a>
+        <a href="mailto:franxmb@gmail.com" class="ms-2">
+          <i
+            class="fas fa-envelope"
+            style="font-size: 24px; color: #ffffff"
+          ></i>
+        </a>
       </div>
     </section>
 
