Se modifica las tablas de educacion  y trabajos por Cards, comenzamos a trabajar con la pagina de portafolio

--- a/index.html
+++ b/index.html
@@ -113,86 +113,131 @@
 
     <!-- Educacion -->
 
-    <section>
-      <h2 class="text-center pb-1">Educación</h2>
+    <main>
+      <h2 class="text-center pb-1 pt-4">Educación</h2>
 
-      <div class="container-fluid bg-secondary bg-opacity-10">
-        <div class="row row-cols-3 text-center d-flex flex-wrap">
-          <div class="col"><h5>Universitaria</h5></div>
-          <div class="col"><h5>Diplomados</h5></div>
-          <div class="col"><h5>Cursos</h5></div>
-          <div class="col">
-            <p>Universidad Simon Rodriguez - Lcdo en Administración</p>
+      <div
+        class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
+      >
+        <div class="row p-xs-0 p-md-5">
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-1 pt-3">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm pt-1">Universitaria</p>
+                <p class="text-body-secondary mb-1">
+                  Universidad Simon Rodriguez - Lcdo en Administración
+                </p>
+              </div>
+            </div>
           </div>
-          <div class="col"><p>AIEP - Ecommerce</p></div>
-          <div class="col">
-            <p>Desafio Latam - Desarrollo Front End</p>
-            <p>Instituto de Internet - Gestión de RRSS</p>
-            <p>Instituto de Internet - Shopify</p>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm pt-1">Diplomados</p>
+                <p class="text-body-secondary mb-1">AIEP - Ecommerce</p>
+                <p class="text-body-secondary mb-1">
+                  CEUJAP - Marketing y Ventas
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm pt-1">Cursos</p>
+                <p class="text-body-secondary mb-1">
+                  Desafio Latam - Desarrollo Front End
+                </p>
+                <p class="text-body-secondary mb-1">
+                  Instituto de Internet - Gestión de RRSS
+                </p>
+                <p class="text-body-secondary mb-1">
+                  Instituto de Internet - Shopify
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </section>
+    </main>
 
     <!-- Experiencia Laboral -->
 
-    <section>
-      <h2 class="text-center pb-1 pt-3">Experiencia Laboral</h2>
+    <main>
+      <h2 class="text-center pb-1 pt-4">Experiencia Laboral</h2>
 
-      <div class="container-fluid bg-secondary bg-opacity-10">
-        <div class="row row-cols-3 text-center d-flex flex-wrap">
-          <div class="col">
-            <h5>Mashini</h5>
-            <p><b>Septiembre 2021 - Actualmente</b></p>
+      <div
+        class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
+      >
+        <div class="row p-xs-0 p-md-5">
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm pt-1">Mashini</p>
+                <p class="text-body-secondary mb-1">
+                  <b>Administrador Web. </b>Gestión completa del ecommerce:
+                  modificación del tema en shopify, carga de productos y
+                  precios, descuentos, optimización de SEO, crear colecciones,
+                  desarrollar secciones con html, manejo de codigo fuente y css,
+                  revision de aplicaciones,. De igual forma, creacion de web
+                  layer y mailing con bloomreach y klaviyo.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <p>Septiembre 2021 - Actualmente</p>
+              </div>
+            </div>
           </div>
-          <div class="col">
-            <h5>Bolco</h5>
-            <p><b>Marzo 2018 - Septiembre 2021</b></p>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm pt-1">Bolco</p>
+                <p class="text-body-secondary mb-1">
+                  <b>Encargado Ecommerce, Marketplaces y Marketing Digital. </b>
+                  Creación y gestión del ecommerce y marketplace, procesar los
+                  pedidos en estos, postventa, envíos. Creación y administración
+                  de las campañas de publicidad en meta bussines y google ads.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <p>Marzo 2018 - Septiembre 2021</p>
+              </div>
+            </div>
           </div>
-          <div class="col">
-            <h5>DRTS Inversiones</h5>
-            <p><b>Enero 2015 - Febrero 2018</b></p>
-          </div>
-          <div class="col">
-            <p>
-              <b>Administrador Web. </b> Gestión completa del ecommerce:
-              modificación del tema en shopify, carga de productos y precios,
-              descuentos, optimización de SEO, crear colecciones, desarrollar
-              secciones con html, manejo de codigo fuente y css, revision de
-              aplicaciones,. De igual forma, creacion de web layer y mailing con
-              bloomreach y klaviyo.
-            </p>
-          </div>
-          <div class="col">
-            <p>
-              <b>Encargado Ecommerce, Marketplaces y Marketing Digital. </b>
-              Creación y gestión del ecommerce y marketplace, procesar los
-              pedidos en estos, postventa, envíos. Creación y administración de
-              las campañas de publicidad en meta bussines y google ads.
-            </p>
-          </div>
-          <div class="col">
-            <p>
-              <b>Asesor de Ventas. </b> Visitar clientes e impulsar las ventas
-              de productos, posteriormente , realizar cobranza y postventa.
-            </p>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm pt-1">DRTS Inversiones</p>
+                <p class="text-body-secondary mb-1">
+                  <b>Asesor de Ventas. </b> Visitar clientes e impulsar las
+                  ventas de productos, posteriormente , realizar cobranza y
+                  postventa.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <p>Enero 2015 - Febrero 2018</p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
-    </section>
+    </main>
 
     <!--Portafolio-->
     <main>
       <h2 class="text-center pb-1 pt-4">Portafolio</h2>
 
-      <div class="container-fluid px-4 m-xs-0 p-md-1 pt-1">
+      <div
+        class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
+      >
         <div class="row p-xs-0 p-md-5">
           <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
               <img
                 src="assets\img\curric.jpg"
                 class="card-img-top"
-                alt="plumon"
+                alt="curriculum"
               />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Introducción a HTML.</p>
@@ -227,7 +272,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
-              <img src="assets\img\css.jpg" class="card-img-top" alt="plumon" />
+              <img src="assets\img\css.jpg" class="card-img-top" alt="css" />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Introducción a CSS.</p>
                 <p class="text-body-secondary mb-1">
@@ -262,11 +307,7 @@
 
           <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
             <div class="card">
-              <img
-                src="assets\img\flex.jpg"
-                class="card-img-top"
-                alt="plumon"
-              />
+              <img src="assets\img\flex.jpg" class="card-img-top" alt="flex" />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">
                   Alineando Contenido con Flex.
@@ -305,7 +346,7 @@
               <img
                 src="assets\img\bootstrap.jpg"
                 class="card-img-top"
-                alt="plumon"
+                alt="bootstrap"
               />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Bootstrap.</p>
@@ -344,7 +385,7 @@
               <img
                 src="assets\img\github.jpg"
                 class="card-img-top"
-                alt="plumon"
+                alt="github"
               />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Terminal, Git y Github.</p>
@@ -383,7 +424,7 @@
               <img
                 src="assets\img\fork.jpg"
                 class="card-img-top"
-                alt="plumon"
+                alt="forkear"
               />
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Repositorios Forkeados.</p>
