--- a/portafolio.html
+++ b/portafolio.html
@@ -4,6 +4,97 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portafolio Franklin Medina</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="assets\css\estilos.css" />
+    <script
+      src="https://kit.fontawesome.com/26c3be3da4.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
-  <body></body>
+  <body>
+    <!-- Menu -->
+    <nav class="navbar navbar-expand-lg bg-black navbar-dark">
+      <div class="container-fluid ps-4">
+        <img
+          src="assets\img\Franklin M..jpg"
+          alt="Bootstrap"
+          width="200"
+          height="30"
+        />
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div
+          class="collapse navbar-collapse justify-content-end"
+          id="navbarNav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Curriculum</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                aria-current="page"
+                href="https://github.com/franklinxavier14?tab=repositories"
+                >Mi Repositorio</a
+              >
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+
+    <!--Portafolio-->
+
+    <section class="footer">
+      <div class="footer bg-black text-center text-light pt-2">
+        <p>Franklin Medina 2023. Todos los derechos reservados</p>
+        <a
+          href="https://github.com/franklinxavier14"
+          target="_blank"
+          class="me-2"
+        >
+          <i class="fab fa-github" style="font-size: 24px; color: #ffffff"></i>
+        </a>
+        <a
+          href="https://www.linkedin.com/in/franklin-medina-7124b9a7/"
+          target="_blank"
+          class="ms-2 me-2"
+        >
+          <i
+            class="fab fa-linkedin"
+            style="font-size: 24px; color: #ffffff"
+          ></i>
+        </a>
+        <a href="mailto:franxmb@gmail.com" class="ms-2">
+          <i
+            class="fas fa-envelope"
+            style="font-size: 24px; color: #ffffff"
+          ></i>
+        </a>
+      </div>
+    </section>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
