--- a/portafolio.html
+++ b/portafolio.html
@@ -61,6 +61,233 @@
     </nav>
 
     <!--Portafolio-->
+    <main>
+      <h2 class="text-center pb-1 pt-4">Portafolio</h2>
+
+      <div
+        class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
+      >
+        <div class="row p-xs-0 p-md-5">
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img
+                src="assets\img\curric.jpg"
+                class="card-img-top"
+                alt="curriculum"
+              />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Introducción a HTML.</p>
+                <p class="text-body-secondary mb-1">
+                  Estructurar el contenido de un documento con HTML para definir
+                  el aspecto visual de una página web.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-3 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://franklinxavier14.github.io/proyectocv/"
+                      role="button"
+                      >Página</a
+                    >
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://github.com/franklinxavier14/proyectocv"
+                      role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img src="assets\img\css.jpg" class="card-img-top" alt="css" />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Introducción a CSS.</p>
+                <p class="text-body-secondary mb-1">
+                  Estructurar el contenido de un documento con HTML y utilizar
+                  componentes CSS para definir el aspecto visual de la página
+                  web.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-3 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://franklinxavier14.github.io/landingpage/"
+                      role="button"
+                      >Página</a
+                    >
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://github.com/franklinxavier14/landingpage"
+                      role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img src="assets\img\flex.jpg" class="card-img-top" alt="flex" />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">
+                  Alineando Contenido con Flex.
+                </p>
+                <p class="text-body-secondary mb-1">
+                  Posicionar elementos en maquetas web, usando las reglas CSS
+                  necesarias para realizar correctamente este proceso.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-3 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://franklinxavier14.github.io/flex/"
+                      role="button"
+                      >Página</a
+                    >
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://github.com/franklinxavier14/flex"
+                      role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img
+                src="assets\img\bootstrap.jpg"
+                class="card-img-top"
+                alt="bootstrap"
+              />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Bootstrap.</p>
+                <p class="text-body-secondary mb-1">
+                  Construir una interfaz web responsiva utilizando componentes
+                  de la biblioteca Bootstrap para dar solución a un problema
+                  planteado.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-3 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://franklinxavier14.github.io/bootstrap/"
+                      role="button"
+                      >Página</a
+                    >
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://github.com/franklinxavier14/bootstrap"
+                      role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img
+                src="assets\img\github.jpg"
+                class="card-img-top"
+                alt="github"
+              />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Terminal, Git y Github.</p>
+                <p class="text-body-secondary mb-1">
+                  Crear un repositorio remoto en Github para controlar las
+                  versiones de un proyecto y publicar la página web utilizando
+                  Github Pages.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-3 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://franklinxavier14.github.io/desafiogit/"
+                      role="button"
+                      >Página</a
+                    >
+                  </div>
+                  <div class="col col-sm-9 text-start">
+                    <a
+                      class="btn btn-primary"
+                      target="_blank"
+                      href="https://github.com/franklinxavier14/desafiogit"
+                      role="button"
+                      >Repositorio</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-xs-12 col-sm-6 col-md-4 pb-3 pt-3">
+            <div class="card">
+              <img
+                src="assets\img\fork.jpg"
+                class="card-img-top"
+                alt="forkear"
+              />
+              <div class="card-body">
+                <p class="card-text fs-5 lh-sm">Repositorios Forkeados.</p>
+                <p class="text-body-secondary mb-1">
+                  Repositorios forkeados y comentados para el proyecto final.
+                </p>
+                <hr class="dropdown-divider-bg" />
+                <div class="row g-0 align-items-start">
+                  <div class="col col-sm-5 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio 1</a
+                    >
+                  </div>
+                  <div class="col col-sm-7 text-start">
+                    <a class="btn btn-primary" href="#" role="button"
+                      >Repositorio 2</a
+                    >
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </main>
+
+    <!--Footer-->
 
     <section class="footer">
       <div class="footer bg-black text-center text-light pt-2">
