se modifican los comentarios

--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
       </div>
     </main>
 
-    <!--Portafolio-->
+    <!--Footer-->
 
     <section class="footer">
       <div class="footer bg-black text-center text-light pt-2">
