se modifican descripciones

--- a/index.html
+++ b/index.html
@@ -276,9 +276,8 @@
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Introducción a CSS.</p>
                 <p class="text-body-secondary mb-1">
-                  Estructurar el contenido de un documento con HTML y utilizar
-                  componentes CSS para definir el aspecto visual de la página
-                  web.
+                  Estructurar el contenido de un documento con HTML y CSS,
+                  definir el aspecto visual de la página web.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
@@ -351,9 +350,8 @@
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Bootstrap.</p>
                 <p class="text-body-secondary mb-1">
-                  Construir una interfaz web responsiva utilizando componentes
-                  de la biblioteca Bootstrap para dar solución a un problema
-                  planteado.
+                  Crear una interfaz web responsiva utilizando componentes de la
+                  biblioteca Bootstrap, dar solución a un problema.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
@@ -390,9 +388,8 @@
               <div class="card-body">
                 <p class="card-text fs-5 lh-sm">Terminal, Git y Github.</p>
                 <p class="text-body-secondary mb-1">
-                  Crear un repositorio remoto en Github para controlar las
-                  versiones de un proyecto y publicar la página web utilizando
-                  Github Pages.
+                  Crear un repositorio remoto en Github y publicar la página web
+                  utilizando Github Pages.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
