se modifican las descripciones

--- a/portafolio.html
+++ b/portafolio.html
@@ -187,7 +187,7 @@
                 <p class="card-text fs-5 lh-sm">Bootstrap.</p>
                 <p class="text-body-secondary mb-1">
                   Crear una interfaz web responsiva utilizando componentes de la
-                  biblioteca Bootstrap, dar solución a un problema.
+                  biblioteca Bootstrap.
                 </p>
                 <hr class="dropdown-divider-bg" />
                 <div class="row g-0 align-items-start">
