correción fuente + espacio en los títulos de cada sección

--- a/portafolio.html
+++ b/portafolio.html
@@ -15,6 +15,10 @@
       src="https://kit.fontawesome.com/26c3be3da4.js"
       crossorigin="anonymous"
     ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <!-- Menu -->
@@ -62,7 +66,7 @@
 
     <!--Portafolio-->
     <main>
-      <h2 class="text-center pb-1 pt-4">Portafolio</h2>
+      <h2 class="text-center pb-2 pt-3">Portafolio</h2>
 
       <div
         class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
