--- a/index.html
+++ b/index.html
@@ -11,10 +11,15 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets\css\estilos.css" />
-    <script
+    <script 
       src="https://kit.fontawesome.com/26c3be3da4.js"
       crossorigin="anonymous"
     ></script>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;300;400;500&display=swap" rel="stylesheet">
+
   </head>
   <body>
     <!-- Menu -->
@@ -114,7 +119,7 @@
     <!-- Educacion -->
 
     <main>
-      <h2 class="text-center pb-1 pt-4">Educación</h2>
+      <h2 class="text-center pb-3 pt-1">Educación</h2>
 
       <div
         class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
@@ -166,7 +171,7 @@
     <!-- Experiencia Laboral -->
 
     <main>
-      <h2 class="text-center pb-1 pt-4">Experiencia Laboral</h2>
+      <h2 class="text-center pb-2 pt-3">Experiencia Laboral</h2>
 
       <div
         class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
@@ -226,7 +231,7 @@
 
     <!--Portafolio-->
     <main>
-      <h2 class="text-center pb-1 pt-4">Portafolio</h2>
+      <h2 class="text-center pb-2 pt-3">Portafolio</h2>
 
       <div
         class="container-fluid px-4 m-xs-0 p-md-1 bg-secondary bg-opacity-10"
