edición botones portafolio

--- a/index.html
+++ b/index.html
@@ -254,14 +254,14 @@
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
                     <a
-                      class="btn btn-primary"
+                      class="btn btn-success"
                       target="_blank"
                       href="https://franklinxavier14.github.io/proyectocv/"
                       role="button"
                       >Página</a
                     >
                   </div>
-                  <div class="col col-sm-9 text-start">
+                  <div class="col col-sm-9 text-end">
                     <a
                       class="btn btn-primary"
                       target="_blank"
@@ -288,14 +288,14 @@
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
                     <a
-                      class="btn btn-primary"
+                      class="btn btn-success"
                       target="_blank"
                       href="https://franklinxavier14.github.io/landingpage/"
                       role="button"
                       >Página</a
                     >
                   </div>
-                  <div class="col col-sm-9 text-start">
+                  <div class="col col-sm-9 text-end">
                     <a
                       class="btn btn-primary"
                       target="_blank"
@@ -324,14 +324,14 @@
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
                     <a
-                      class="btn btn-primary"
+                      class="btn btn-success"
                       target="_blank"
                       href="https://franklinxavier14.github.io/flex/"
                       role="button"
                       >Página</a
                     >
                   </div>
-                  <div class="col col-sm-9 text-start">
+                  <div class="col col-sm-9 text-end">
                     <a
                       class="btn btn-primary"
                       target="_blank"
@@ -362,14 +362,14 @@
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
                     <a
-                      class="btn btn-primary"
+                      class="btn btn-success"
                       target="_blank"
                       href="https://franklinxavier14.github.io/bootstrap/"
                       role="button"
                       >Página</a
                     >
                   </div>
-                  <div class="col col-sm-9 text-start">
+                  <div class="col col-sm-9 text-end">
                     <a
                       class="btn btn-primary"
                       target="_blank"
@@ -400,14 +400,14 @@
                 <div class="row g-0 align-items-start">
                   <div class="col col-sm-3 text-start">
                     <a
-                      class="btn btn-primary"
+                      class="btn btn-success"
                       target="_blank"
                       href="https://franklinxavier14.github.io/desafiogit/"
                       role="button"
                       >Página</a
                     >
                   </div>
-                  <div class="col col-sm-9 text-start">
+                  <div class="col col-sm-9 text-end">
                     <a
                       class="btn btn-primary"
                       target="_blank"
@@ -440,7 +440,7 @@
                       >Repositorio 1</a
                     >
                   </div>
-                  <div class="col col-sm-7 text-start">
+                  <div class="col col-sm-7 text-end">
                     <a class="btn btn-primary" href="#" role="button"
                       >Repositorio 2</a
                     >
